--- a/style.css
+++ b/style.css
@@ -10,4 +10,4 @@ nav a{color:rgb(119, 19, 250);text-decoration:none;text-align: right;}
 PRIMEIROPARAGRAFO{text-align: justify;font-size: 18px;border: black solid 2px;padding: 10px;margin: 10px;}
 #TITULOIMAGEM{width;5%;height:5%;}
 #lista01{display: block;text-align: center;}
-#lista02{dislay: inline-block;}
+#lista02{display: inline-block;}
