--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body{background: color #3efaf7;text-align: justify;font: size 18px;}
-h1{text-align: center;background-color;#FBDBA;color: #17313b;}
+body{background-color:  #3efaf7;text-align: justify;font: size 18px;}
+h1{text-align: center;background-color: #FBDBA;color: #17313b;}
 h3{text-align: justify;color: #1f7a79;}
-b{color: blue font size 18px;}
-i{color: blue: font size 18px;}
+b{color: blue font-size 18px;}
+i{color: blue font-size 18px;}
 header,footer{background-color: #499cba;color:#ceeffe;text-align:center;font-size: 20px;border:black solid 2px;}
 main{background-color: #8ddefc;}
 nav li{text-transform:uppercase;list-style: none;display: inline;margin-left: 10px;text-align: right;}
